# context42

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
context42/: cli.py
context42/clara/: config.py  generator.py  manager.py
