[project]
name = "context42"
version = "0.1.0"
description = "MCP RAG Server - Local text search with compression"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
context42 = "context42.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context42"]
